fix: add auto scrolling on mobile nav

--- a/src/styles/modules/mobileNav.module.scss
+++ b/src/styles/modules/mobileNav.module.scss
@@ -13,6 +13,7 @@
   background: $darkColor;
   opacity: 0;
   transition: 0.2s;
+  overflow-y: auto;
 }
 
 .show {
